Replace Apache Commons Lang 2 with Java APIs due to removal from core and security issue (#144)